test/sema/struct_param_decl_shadowed.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: i32
}

fn foo(S: S) -> void {
  // CHECK: [[# @LINE - 1 ]]:8: error: redeclaration of 'S'
  let x = S.x;
}

fn main() -> void {
}
